@@ -213,7 +213,8 @@
 	
 	
 	
-	img, object, embed { max-width: 100%; height: auto; }
+	img { max-width: 100%; height: auto; }
+	object, embed { max-width: 100%; }
 	img { -ms-interpolation-mode: bicubic; }
 	#map_canvas img, .map_canvas img {max-width: none!important;}
 	 
