@@ -6,6 +6,8 @@ Version 4.1.1 (04-03-12)
 -Fixed bug in meta-box-class.php causing unidentified index errors.
 -Only apply div wrapper to YouTube and Vimeo embeds when responsive design enabled.
 -Fixed bug on archive template related to empty categories.
+-Removed height:auto for objects in responsive stylesheet. 
+-Adjusted "viewport" initial scale for full-width mobile device view. 
 
 Version 4.1 (03-21-12)
 -Added Croatian language files.
